tests/baselines/reference/parserEnum4.errors.txt
tests/cases/conformance/parser/ecmascript5/EnumDeclarations/parserEnum4.ts(3,17): error TS1148: Cannot compile external modules unless the '--module' flag is provided.
tests/cases/conformance/parser/ecmascript5/EnumDeclarations/parserEnum4.ts(4,9): error TS1132: Enum member expected.


==== tests/cases/conformance/parser/ecmascript5/EnumDeclarations/parserEnum4.ts (2 errors) ====
    
    
        export enum SignatureFlags {
                    ~~~~~~~~~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
            ,
            ~
!!! error TS1132: Enum member expected.
        }